--- a/Demo.html
+++ b/Demo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta charset=utf-8> 
+  <meta charset=utf-8>
 </head>
 
 <body>
@@ -20,22 +20,26 @@
   <img src="http://placehold.it/350x150" style="border: 2px solid red">
 </body>
 <style>
-  html,body{
+  html,
+  body {
     margin: 20px;
   }
-  body{
+
+  body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
   }
-  img{
+
+  img {
     margin: 20px;
   }
 </style>
-<script src="FollowCursor.js"></script>
+<script src="dist/followCursor.js"></script>
 <script>
-window.onload = function () {
-  followCursor(document.querySelectorAll("img"));
-};
+  window.onload = function() {
+    followCursor(document.querySelectorAll("img"));
+  };
 </script>
+
 </html>
