Keep current css Transforms when applying.

--- a/Demo.html
+++ b/Demo.html
@@ -8,7 +8,7 @@
 <body>
   <img src="http://placehold.it/350x150">
   <img src="http://placehold.it/350x150">
-  <img src="http://placehold.it/350x150">
+  <img src="http://placehold.it/350x150" style="transform: scale(0.9) skew(10deg)">
   <img src="http://placehold.it/350x150">
   <img src="http://placehold.it/850x250">
   <img src="http://placehold.it/350x150">
